# tg-bot

./: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
pq-bot/: CMakeLists.txt
pq-bot/src/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Exception.cpp  Exception.hpp  HttpClient.cpp  HttpClient.hpp  PostgreSQLWrapper.cpp  PostgreSQLWrapper.hpp  TelegramBotAPI.cpp  TelegramBotAPI.hpp  main.cpp
scripts/: build_units.sh  run_units.sh
tests/: CMakeLists.txt  main.cpp  pq_bot_units.cpp
tests/pq-bot/: config_tests.hpp  telegram_api_tests.hpp  tlg_api_tests.hpp
